# Rust-Commander

./: Cargo.toml  README.md  tauri.conf.json
src/: config.rs  main.rs  ocr.rs  screen.rs
ui/: index.html  script.js  style.css
