[package]
name = "hon_commander"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# DÜZELTME: "system-tray" özelliğini buradan sildik
tauri = { version = "1", features = ["api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ... (Mevcut kodlar)

[dependencies.rodio]
version = "0.17"

tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "0.52"
features = [
    "Media_Ocr",
    "Globalization",
    "Graphics_Imaging",
    "Storage_Streams",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Foundation"
	
]